# WoWTool

./: .gitignore  CMakeLists.txt  README.md
src/: BuildChanger.cpp  Camera.cpp  Camera.h  Defines.h  Defines_12340.h  Defines_8606.h  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  PreCompiled.h  VersionNo.h  WoWCamera.cpp  WoWManager.cpp  WoWManager.h  WoWPlayer.cpp  WoWPlayer.h  main.cpp  main.h  version.txt
src/WoW/: Defines.h  Defines_12340.h  Defines_8606.h
src/WoW/Classes/: Camera.cpp  Engine.cpp  Engine.h  Player.cpp  Player.h  WoWManager.cpp  WoWManager.h
src/res/: WoWTool.rc  resource.h
win/: BuildChanger.vcproj  WoWTool.sln  WoWTool.vcproj  WoWTool.vcxproj  WoWTool.vcxproj.filters
